Optimized with Integer.valueOf.  Thanks Findbugs!